# camel-ai-cookbooks

./: .gitignore  DEV.md  Makefile  README.md  pyproject.toml
src/agents/base/: py_trees_util.py
src/agents/customer_agent/: README.md  customer_agent.py  customer_ui.py
src/base/: py_trees_util.py
src/basic_concepts/: agent_human_in_loop.py  agent_memory.py  first_agent.py  first_agent_compatible_oai.py  first_agent_society.py  first_agent_with_response_format.py  first_agent_with_stream.py  model_speed_comparison.py  single_agent_with_tools.py
src/customer_agent/: README.md  customer_agent.py
